/*
 * Copyright 2019 Infostellar, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "stellarstation/api/v1/stellarstation.proto";
import "stellarstation/api/v1/transport.proto";

package stellarstation.api.v1.groundstation;

option go_package = "github.com/infostellarinc/go-stellarstation/api/v1/groundstation";

option java_multiple_files = true;
option java_outer_classname = "PlanExecution";
option java_package = "com.stellarstation.api.v1.groundstation";

// A message sent during execution of a plan to inform the client of events or updates about
// the plan.
message PlanExecutionServerMessage {
  oneof Message {
    // The plan has begun. Sent soon after the plan's `start_time'. The client should start setting
    // up the ground station facility for the plan and be ready by `aos_time'.
    PlanWillBegin begin = 1;

    // The plan has ended. Sent when the plan's final status is determined. The client should
    // finish cleanup jobs if any by the plan's `end_time'.
    PlanDidEnd end = 2;
  }
}

// A server-generated message to inform the client that a plan has begun.
message PlanWillBegin {
  // Predicted coordinates of the tracked satellite for every second between AOS and LOS. This
  // information is intended for calculating device states such as rotator angles and radio
  // frequencies.
  repeated SatelliteCoordinates satellite_coordinates = 1;
}

// A server-generated message to inform the client that a plan has ended.
message PlanDidEnd {
  // The final status of the plan.
  Plan.Status status = 1;
}

// Coordinates of the tracked satellite observed from the ground station,.
message SatelliteCoordinates {
  // The time which the coordinates are for.
  google.protobuf.Timestamp time = 1;

  // The angle of the satellite.
  Angle angle = 2;

  // The range rate (change rate of distance) of the satellite. You can use this value to calculate
  // Doppler shifted communication frequencies using the following formulae.
  //   uplink:
  //     shifted_freq = original_freq * (1.0 + range_rate / speed_of_light)
  //   downlink:
  //     shifted_freq = original_freq * (1.0 - range_rate / speed_of_light)
  //   where speed_of_light is 299792458.0 m/s.
  double range_rate = 3;
}

// An az/el angle.
message Angle {
  // The azimuth.
  double azimuth = 1;

  // The elevation.
  double elevation = 2;
}

// A message sent during execution of a plan to inform the server of events or updates about
// the plan.
message PlanExecutionClientMessage {
  oneof Message {
    // Informs the server that the plan should be aborted. When the server receives this event it
    // stops execution of the plan immediately and sets its status to FAILED.
    PlanShouldAbort abort = 1;
  }
}

// A client-generated message to inform the server that the currently executing plan should be
// aborted.
message PlanShouldAbort {
  // The reason for the abortion.
  string reason = 1;
}
